syntax ="proto3";

option go_package = ".;proto";

service User{
   rpc GetUserList(PageInfo)returns(UserListReponse);//获取所有用户
   rpc GetUserByMobile(MobileRequest)returns(UserInfo);//通过电话查寻用户
   rpc GetUserById(IdRequest)returns(UserInfo);//通过id查询用户
   rpc CreateUser(CreateUserInfo)returns(UserInfo); //创建用户
   rpc UpdateUser(UpdateUserInfo) returns(Empty);//更新用户
   rpc CheckPassword(CheckPwd) returns(CheckResponse);
}
message  Empty{}

message PageInfo{
  uint32 Pn = 1;
  uint32  pSize = 2;

}
message UserInfo{
  int32  id =1;
  string password = 2;
  string  mobile = 3;
  string nickNmae= 4;
  uint64  birthday =5;
  string gender = 6;
  int32 role = 7;
}
message UserListReponse{
   int32  total = 1;
   repeated UserInfo data =2;
}
message MobileRequest{
  string mobile = 1;
}
message IdRequest{
  int32 Id = 1;
}
message CreateUserInfo{
   string  nickName = 1;
   string passWord = 2;
   string  mobile = 3;

}
message UpdateUserInfo{
  int32 id= 1;
  string  nickName = 2;
  string gender = 3;
  string password = 4;
  uint64  birthday = 5;
}

message CheckPwd{
  string  password = 1;
  string encryptedPassword = 2;
}
message CheckResponse{
  bool success = 1;
}